--- a/PCStudioApp.json
+++ b/PCStudioApp.json
@@ -959,7 +959,7 @@
     "DFFlagWindowsWebViewTelemetryEnabled": true,
     "DFIntWindowsWebViewTelemetryThrottleHundredthsPercent": 1000,
     "DFIntStudioVideoImportSupportedMaxDurationSeconds": 31,
-    "DFIntGameServerInitializationSuccessHundredths": 1000,
+    "DFIntGameServerInitializationSuccessHundredths": 500,
     "FFlagFixMockSizingLabelMemoryLeak": true,
     "FFlagExpandedDeeplinkLogging": true,
     "DFIntGameJoinFlowTelemetryThrottle": 10000,
@@ -8182,7 +8182,7 @@
     "FFlagAXFixBundleVerifiedBadgeInWidgets": true,
     "FFlagAXHideRecommendationsOnFetchFailure": true,
     "FFlagFixDuplicateBubblesWithChatChat": true,
-    "DFIntRobloxTelemetryPointV2ProdTrafficPercent": 20,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent": 30,
     "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}",
     "DFFlagExplicitPlaySessionIdHttpDownloadBandwidth": true,
     "FFlagPassTextWrapToAndroidNative": true,
@@ -8226,7 +8226,6 @@
     "FFlagScreenshotsIsActive_v1": false,
     "DFFlagMeasureMissedProcessPackets2": true,
     "FFlagAinSettingsHandleAnchored": true,
-    "DFFlagSimOptimizeSetSize": true,
     "FFlagEnableServerGetUserPosts_PlaceFilter": "true;82695214392018;92359758414863",
     "FFlagStudioActionsManagedUtil": true,
     "FFlagMakeEntrypointButtonDraggable_v10": true,
@@ -8344,6 +8343,9 @@
     "FFlagUIDragDetectorEnableUseWithMorePlugins": true,
     "FFlagUIDragDetectorImproveFindUIDragDetector": true,
     "FFlagStoringCsmTimestamp": true,
+    "FFlagLuaAppTextFooterLegacyTile": true,
+    "FFlagProfilePlatformEnableQuickLinks": true,
+    "FFlagGameDetailsSeparateChatFeatureRows": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -9315,6 +9317,7 @@
     "FFlagStudioUpdateAnchorStatusOnlyWhenChanged": true,
     "FFlagStudioFixDialogImageManagerCrash": true,
     "FFlagCleanUpAXAlternativeLandingPageIXP": true,
+    "FFlagRemovePSMLFromPhysicsSettingsHandler": true,
     "FFlagRenderEnableGlobalInstancingD3D11": true,
     "FFlagShorelinesRemoveDialog": true,
     "FFlagTerrainEditorUseTerrainChannels": true,
@@ -9375,7 +9378,6 @@
     "FFlagAXAddUiTreatmentTypeForWidgetLog": true,
     "FFlagAppChatTabDeepLinkNavbarVisibilityFix": true,
     "FFlagImageReuseMip0FromGImage": true,
-    "FFlagProfilePlatformEnableQuickLinks": true,
     "FFlagEnableZstdForClientSettings": true,
     "FFlagEnableWebViewProtocolV22": true,
     "FFlagSendRenderFidelityTelemetry2": true,
@@ -9450,6 +9452,7 @@
     "DFIntRakNetMissingPingLogFrequencyMs": 20000,
     "FFlagRemoveHardCodedFriendLimitPrompt": true,
     "DFIntRakNetMissingPingPongReportThrottleHundredthsPercent": 10,
+    "FFlagUIDragDetector2": true,
     "FFlagDebugLuaAppValidateProps": true,
     "FStringFeature_CookieProtocolEnabled": "524;100",
     "FFlagUseParallelTypecheckInLSP2": true,
@@ -9468,8 +9471,9 @@
     "FFlagEnableVisBugChecks27": true,
     "DFFlagUseVisBugChecks_PlaceFilter": "true;7208091524;7902470429;10489114145;9872472334;8481844229;299659045",
     "FFlagCSGPublishBugFix": true,
-    "FStringFlagRepoGitHashFastString": "36fad7e9c1b204a0ddcdf8bcfa11ebae0197e185",
-    "DFStringFlagRepoGitHashDynamicString": "36fad7e9c1b204a0ddcdf8bcfa11ebae0197e185",
-    "FStringFlipTimeStampFastString": "2024-11-01T15:19:19.953Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-01T15:19:19.953Z"
+    "FFlagMigratePublishingNewEndpoint": true,
+    "FStringFlagRepoGitHashFastString": "878b1e500b990eb7211bb426e4e692a852e13a39",
+    "DFStringFlagRepoGitHashDynamicString": "878b1e500b990eb7211bb426e4e692a852e13a39",
+    "FStringFlipTimeStampFastString": "2024-11-01T23:37:47.453Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-01T23:37:47.453Z"
 }
