--- a/UWPApp.json
+++ b/UWPApp.json
@@ -959,7 +959,7 @@
     "DFFlagWindowsWebViewTelemetryEnabled": true,
     "DFIntWindowsWebViewTelemetryThrottleHundredthsPercent": 1000,
     "DFIntStudioVideoImportSupportedMaxDurationSeconds": 31,
-    "DFIntGameServerInitializationSuccessHundredths": 1000,
+    "DFIntGameServerInitializationSuccessHundredths": 500,
     "FFlagFixMockSizingLabelMemoryLeak": true,
     "FFlagExpandedDeeplinkLogging": true,
     "DFIntGameJoinFlowTelemetryThrottle": 10000,
@@ -8182,7 +8182,7 @@
     "FFlagAXFixBundleVerifiedBadgeInWidgets": true,
     "FFlagAXHideRecommendationsOnFetchFailure": true,
     "FFlagFixDuplicateBubblesWithChatChat": true,
-    "DFIntRobloxTelemetryPointV2ProdTrafficPercent": 20,
+    "DFIntRobloxTelemetryPointV2ProdTrafficPercent": 30,
     "DFStringDynamicRCCMemoryLimitsCustomPoliciesJson": "{\"type\": \"MinLimitAtCapacity\", \"playerCapacity\": 200, \"valueMB\": 13000}",
     "DFFlagExplicitPlaySessionIdHttpDownloadBandwidth": true,
     "FFlagPassTextWrapToAndroidNative": true,
@@ -8215,7 +8215,7 @@
     "FFlagAvatarPreviewerForceValidationDialogModal": true,
     "FFlagAvatarPreviewerTabBarTopLine": true,
     "FFlagSimSolverDenseInvertTinyLDLComponents5": true,
-    "FFlagScreenshotsSaveToDeviceToast_v2": true,
+    "FFlagScreenshotsSaveToDeviceToast_v2": false,
     "DFFlagFixReportDropPktStats": true,
     "FStringNewUserExperimentLayer": "Creator.Assistant.CreatorId",
     "FStringReturningUserExperimentLayer": "Creator.Assistant.CreatorId",
@@ -8226,7 +8226,6 @@
     "FFlagScreenshotsIsActive_v1": false,
     "DFFlagMeasureMissedProcessPackets2": true,
     "FFlagAinSettingsHandleAnchored": true,
-    "DFFlagSimOptimizeSetSize": true,
     "FFlagEnableServerGetUserPosts_PlaceFilter": "true;82695214392018;92359758414863",
     "FFlagStudioActionsManagedUtil": true,
     "FFlagMakeEntrypointButtonDraggable_v10": true,
@@ -8344,6 +8343,9 @@
     "FFlagUIDragDetectorEnableUseWithMorePlugins": true,
     "FFlagUIDragDetectorImproveFindUIDragDetector": true,
     "FFlagStoringCsmTimestamp": true,
+    "FFlagLuaAppTextFooterLegacyTile": true,
+    "FFlagProfilePlatformEnableQuickLinks": false,
+    "FFlagGameDetailsSeparateChatFeatureRows": true,
     "AllowVideoPreRoll": true,
     "AxisAdornmentGrabSize": 12,
     "CaptureCountersIntervalInMinutes": 5,
@@ -8552,8 +8554,8 @@
     "FStringDefaultModeratedAvatarHeadImageAssetId": 140234539950892,
     "FFlagRefactorTeleportServiceGlobalFields4": true,
     "FFlagUseNewImageOnModeratedThumbnails": true,
-    "FStringFlagRepoGitHashFastString": "36fad7e9c1b204a0ddcdf8bcfa11ebae0197e185",
-    "DFStringFlagRepoGitHashDynamicString": "36fad7e9c1b204a0ddcdf8bcfa11ebae0197e185",
-    "FStringFlipTimeStampFastString": "2024-11-01T15:19:19.953Z",
-    "DFStringFlipTimeStampDynamicString": "2024-11-01T15:19:19.953Z"
+    "FStringFlagRepoGitHashFastString": "878b1e500b990eb7211bb426e4e692a852e13a39",
+    "DFStringFlagRepoGitHashDynamicString": "878b1e500b990eb7211bb426e4e692a852e13a39",
+    "FStringFlipTimeStampFastString": "2024-11-01T23:37:47.453Z",
+    "DFStringFlipTimeStampDynamicString": "2024-11-01T23:37:47.453Z"
 }
